# sabu

./: .gitignore  README.md  requirements.txt
.github/workflows/: mirror-to-gitea.yml  publish-jug-lca-buildings-docker.yml
contracts/examples/jug_lca_buildings/: emissions.request.json  emissions.response.200.csv
contracts/jsonschema/jug_lca_buildings/: emission_result.schema.json
contracts/openapi/: jug_lca_buildings.yaml
libs/citygisoo/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
libs/citygisoo/src/citygisoo/: scrub_layer_class.py
libs/jugs_chassis/: CHANGELOG.md  README.md  pyproject.toml
libs/jugs_chassis/src/jugs_chassis/logging/: config.py  formatters.py
libs/sabu_chassis/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
libs/sabu_chassis/src/sabu_chassis/logging/: __init__.py  config.py  context.py  filters.py  logging_config.json
services/jug_gis_cities/src/jug_gis_cities/central_mtl_gisoo/: handle_le_petit_mtl_wf.py  input_paths_and_layers.py
services/jug_gis_cities/src/jug_gis_cities/mtl_gisoo/: basic_functions.py  handle_mtl_ds_workflow.py  input_paths_and_layers.py
services/jug_gis_cities/src/jug_gis_cities/saint_claude_gisoo/: handle_saint_claude_wf.py  input_paths_and_layers.py
services/jug_gis_cities/src/jug_gis_cities/saint_malachie_gisoo/: handle_saint_claude_wf.py  handle_saint_malachie_wf.py  input_paths_and_layers.py
services/jug_gis_validation/: README.md
services/jug_gis_validation/notebooks/: interactive_validation_wf.ipynb
services/jug_lca_buildings/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  app.py  docker-compose.yml  pyproject.toml
services/jug_lca_buildings/docker/: Dockerfile
services/jug_lca_buildings/src/jug_lca_buildings/: lca_carbon_workflow.py
services/jug_lca_buildings/src/jug_lca_buildings/application/: __init__.py  jug_lca_buildings.py
services/jug_lca_buildings/src/jug_lca_buildings/data/: nrcan_archetypes.json  nrcan_constructions_cap_3.json  nrcan_materials_dictionaries.json  nrcan_transparent_surfaces_dictionaries.json
services/jug_lca_buildings/src/jug_lca_buildings/life_cycle_assessment/: __init__.py  access_nrcan_catalogue.py  energy_systems_material_emission.py  envelope_emission.py  input_geojson_content.py  lca_end_of_life_carbon.py  machine.py  opening_emission.py  vehicle.py
services/jug_lca_buildings/src/jug_lca_buildings/reporting/: __init__.py  emissions_report_exporter.py
services/jug_lca_buildings/src/jug_lca_buildings/resources/: emissions.py
services/jug_lca_buildings/src/jug_lca_buildings/schemas/: schemas.py
services/jug_lca_buildings/src/jug_lca_buildings/storage/: __init__.py  emissions_artifact_store.py
services/jug_lca_buildings/tests/: fixtures.py  test_access_nrcan_catalogue.py  test_emissions_api.py  test_envelope_emission.py  test_input_geojson_content.py  test_lca_carbon_workflow.py  test_lca_end_of_life_carbon.py  test_machine.py  test_opening_emission.py
