[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jug_lca_buildings"
version = "0.1.1"
description = "Embodied and end-of-life estimator service."
authors = [
  { name = "Alireza Adli" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]

dependencies = [
  "cerc-hub==0.2.0.8",
  "flask==3.1.1",
  "flask-smorest==0.46.1",
  "sabu-chassis==0.1.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["jug_lca_buildings*"]

[tool.setuptools.package-data]
jug_lca_buildings = ["data/*.json"]

[project.urls]
Homepage = "https://demianadli.com"
Repository = "https://github.com/demianAdli/sabu"
Source = "https://github.com/demianAdli/sabu/tree/main/services/jug_lca_buildings"
Issues = "https://github.com/demianAdli/sabu/issues"
Changelog = "https://github.com/demianAdli/sabu/tree/main/services/jug_lca_buildings/CHANGELOG.md"
